src/App.css
.game {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.game-board {
  display: flex;
  flex-wrap: wrap;
  height: 180px;
  width: 180px;
  border: 1px solid black;
}

.game-square {
  vertical-align: top;
  margin: 0;
  padding: 0;
  height: 60px;
  width: 60px;
  font-size: 40px; 
  border: 1px solid black; 
}

